--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 
 .ribbon img{
     width: 1.5rem;
+    margin: 0.2rem;
 }
 
 @media screen and (max-width: 768px) {
